# strato-platform

./: .Makefile.swp  .cursorrules  .dockerignore  .env  .env.example  .eslintrc  .ftpconfig_silo4  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .package.yaml.swp  .stylish-haskell.yaml  .tags  .tags1  .test-pr  .tmuxinator.yml  .travis.yml  404.html  AGENTS.md  AddressTest.sol  BUILD_METADATA  Basilbuild  Basilfile  Basilfile.prod  Basilfile.test  Basilfile.with-bloc  Basilhooks  CNAME  CONTRIBUTING.md  ConfirmHeliumGenesisBlock.py  DISCLAIMER.md  Dockerfile  Dockerfile.buildbase  Dockerfile.deploybase  Dockerfile.formatter  Dockerfile.multi  FixedPointNumbersTest.sol  FixedSizeByteArrayTest.sol  FunctionTest.sol  (+149 more)
bloc/: Dockerfile  Dockerfile.deploybase  README.md  blockapps-bloc.cabal  doit.sh  setup_ubuntu
bloc/api/: API.hs  blockapps-bloc-api.cabal
bloc/api/docs/: Main.hs
bloc/api/src/: API.hs
bloc/app/: Main.hs
bloc/bloc20/api/: blockapps-bloc20-api.cabal
bloc/bloc20/client/: blockapps-bloc20-client.cabal
bloc/bloc20/server/: blockapps-bloc20-server.cabal
bloc/bloc21/api/: LICENSE  blockapps-bloc21-api.cabal
bloc/bloc21/client/: blockapps-bloc21-client.cabal
bloc/bloc21/server/: blockapps-bloc21-server.cabal
bloc/bloc22/api/: blockapps-bloc22-api.cabal
bloc/bloc22/client/: blockapps-bloc22-client.cabal
bloc/bloc22/server/: blockapps-bloc22-server.cabal
bloc/cirrus/api/: blockapps-cirrus-api.cabal
bloc/cirrus/client/: blockapps-cirrus-client.cabal
bloc/client/: blockapps-bloc-client.cabal
bloc/client/test/: Spec.hs
bloc/docs/: API.markdown
bloc/exe/: README.md  blocExec.cabal
bloc/exe/app/: Main.hs  Options.hs
bloc/exe/docs/: Main.hs
bloc/server/: blockapps-bloc-server.cabal
bloc/server/app/: Main.hs
bloc/server/test/: Spec.hs  TestSetup.hs
bloc/solidity/contracts/: Array.sol  FixedArray.sol  Types.sol
bloc/src/: DummyContractStorage.hs
bloc/test/: Spec.hs
blockapps-bloc/: blockapps-bloc.cabal
blockapps-bloc/app/: Main.hs
blockapps-bloc/docs/: API.markdown
blockapps-bloc/test/: Spec.hs
blockapps-data/: blockapps-data.cabal
blockapps-data/exec_src/: GlobalDB.hs
blockapps-data/test/: Spec.hs
blockapps-strato/: blockapps-strato.cabal
blockapps-tools/: README.md  blockapps-tools.cabal
blockapps-tools/src/: Block.hs  BlockGO.hs  CanonRedis.hs  Checkpoints.hs  Code.hs  DumpKafkaBlocks.hs  DumpKafkaRaw.hs  DumpKafkaSequencer.hs  DumpKafkaStateDiff.hs  DumpKafkaUnSequencer.hs  DumpKafkaUnminedBlocks.hs  DumpLevelDB.hs  DumpRedis.hs  FRawMP.hs  Hash.hs  Init.hs  InsertTX.hs  Main.hs  Psql.hs  RLP.hs  Raw.hs  RawMP.hs  Restore.hs  State.hs  Util.hs
blockapps-util/: blockapps-util.cabal
ecrecover/: blockapps-ecrecover.cabal
ecrecover/parallel-benchmark/: Main.hs
ecrecover/sequential-benchmark/: Main.hs
ecrecover/tests/: Main.hs
ethereum/: blockapps-ethereum.cabal
ethereum-abi/: blockapps-ethereum-abi.cabal
ethereum-discovery/: ethereum-discovery.cabal
ethereum-discovery/exec_src/: Main.hs
ethereum-encryption/: ethereum-encryption.cabal
ethereum-encryption/src/: Main.hs
ethereum-jsonrpc/: ethereum-jsonrpc.cabal  stack.yaml
ethereum-jsonrpc/src/: APIProxy.hs  Binary.hs  Commands.hs  Main.hs  RPC.hs  Server.hs
ethereum-test/: ethereum-test.cabal
ethereum-test/src/: Main.hs  TestDescriptions.hs  TestEthereum.hs  TestFiles.hs
ethereum-test/test/: TestMain.hs
ethereum-vm/: ethereum-vm.cabal
ethereum-vm/exec_src/: Main.hs
ethereum-vm/test/: Spec.hs
fast-ecrecover/: fast-ecrecover.cabal
fast-ecrecover/benchmark/: Main.hs
merkle-patricia-db/: merkle-patricia-db.cabal
merkle-patricia-db/test/: Main.hs  MerklePatriciaSpec.hs
miner-ethash/: miner-ethash.cabal
miner-ethash/exec_src/: Main.hs  mkDataset.hs
miner-ethash/src/: Cache.hs  Constants.hs  Dataset.hs  Hashimoto.hs  TimeIt.hs  Util.hs
solidity/: Struct2.sol  Types.sol  blockapps-solidity.cabal
solidity/contracts/: FixedArray.sol  Pragma.sol  PragmaAfter.sol  PragmaCarat.sol  PragmaGT.sol  PragmaGTE.sol  PragmaLT.sol  PragmaLTE.sol  PragmaLiquidity.sol  PragmaNoColon.sol  PragmaStar.sol  PragmaV.sol  Pragmax.sol  Pragmax2.sol  SimpleStoragePragma.sol  Struct.sol
state-translate/: README.md  state-translate.cabal
state-translate/src/: ProcessComplexTypes.hs  ProcessSimpleTypes.hs  SolidityStateTranslate.hs  SolidityStateTypes.hs
state-translate/test/: ArrayDeclarations.hs  ComplexState.hs  FunctionDeclarations.hs  MappingDeclarations.hs  PrimitiveState.hs  SimpleDeclarations.hs  StructEnumDeclarations.hs  SyntaxFails.hs  Tasty.hs
strato-conf/: README.md  peers.yaml  strato-conf.cabal
strato-index/: strato-index.cabal
strato-index/exec_src/: ApiIndexerMain.hs  Main.hs  P2PIndexerMain.hs
strato-init/: .gitignore  Readme.md  strato-init.cabal
strato-init/genesisBlocks/: gettingStartedGenesis.json  hybrid2000Genesis.json
strato-init/src/: Backup.hs  BlockBackup.hs  GenerateGenesis.hs  GenesisSetup.hs  Main.hs  RestoreTool.hs
strato-init/test/: GenerationSpec.hs  JsonSpec.hs
strato-model/: strato-model.cabal
strato-p2p/: strato-p2p.cabal
strato-p2p-client/: strato-p2p-client.cabal
strato-p2p-client/exec_src/: Main.hs
strato-p2p-client/test/: NewEvent.hs
strato-p2p-server/: .gitignore  README.md  strato-p2p-server.cabal
strato-p2p-server/exec_src/: Main.hs  Strato.hs
strato-p2p/exec_src/: StratoP2PServerMain.hs
strato-redis-blockdb/: strato-redis-blockdb.cabal
strato-redis-blockdb/exec_src/: Viz.hs
strato-redis-blockdb/strato-redis-blockdb-functions/: strato-redis-blockdb-functions.cabal
strato-redis-blockdb/strato-redis-blockdb-model/: strato-redis-blockdb-model.cabal
strato-redis-blockdb/test/: HLint.hs  Test.hs  TestChain.hs
strato-sequencer/: rejections.md  stack.yaml  strato-sequencer.cabal
strato-sequencer/exec-src/: Flags.hs  Main.hs
strato-statediff/: strato-statediff.cabal
test-suite/: .gitignore  ethereum-test.cabal  test-suite.cabal
test-suite/src/: Main.hs  TestDescriptions.hs  TestEthereum.hs  TestFiles.hs
test-suite/test/: TestMain.hs
(+10407 files in other folders)
