name: blockapps-bloc
version: 0.1.0.0
synopsis: Bloc microservice
description: Bloc microservice
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-bloc
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    BlockApps.Bloc.API
    BlockApps.Bloc.API.Addresses
    BlockApps.Bloc.API.Contracts
    BlockApps.Bloc.API.Search
    BlockApps.Bloc.API.Users
    BlockApps.Bloc.API.Utils
    BlockApps.Bloc.Crypto
    BlockApps.Bloc.Database.Create
    BlockApps.Bloc.Database.Queries
    BlockApps.Bloc.Database.Tables
    BlockApps.Bloc.Monad
    BlockApps.Bloc.Options
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
    , bimap
    , binary
    , blockapps-ethereum
    , blockapps-solidity
    , blockapps-strato-api
    , blockapps-strato-client
    , aeson
    , aeson-casing
    , containers
    , contravariant
    , cryptonite
    , bytestring
    , base16-bytestring
    , generic-random
    , hflags
    , http-api-data
    , http-client
    , http-media
    , logging-effect
    , memory
    , monad-control
    , monad-loops
    , mtl
    , opaleye
    , postgresql-simple
    , product-profunctors
    , profunctors
    , QuickCheck
    , quickcheck-instances
    , relapse
    , saltine
    , secp256k1
    , servant
    , servant-client
    , servant-docs
    , servant-mock
    , servant-server
    , stm
    , text
    , time
    , transformers-base
    , unordered-containers
    , warp
    , wl-pprint-text

executable blockapps-bloc
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Werror
  build-depends: base
    , blockapps-bloc
    , blockapps-strato-api
    , blockapps-strato-client
    , hflags
    , http-client
    , postgresql-simple
    , servant-client
    , warp
  default-language: Haskell2010

test-suite blockapps-bloc-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
    BlockApps.Bloc.APISpec
    BlockApps.Bloc.API.AddressesSpec
    BlockApps.Bloc.API.ContractsSpec
    BlockApps.Bloc.API.E2ESpec
    BlockApps.Bloc.API.SearchSpec
    BlockApps.Bloc.API.UsersSpec
    BlockApps.Bloc.API.SpecUtils
  other-modules:
  build-depends: base >=4 && < 5
    , blockapps-bloc
    , blockapps-strato-api
    , blockapps-strato-client
    , blockapps-solidity
    , blockapps-ethereum
    , directory
    , generic-random
    , hspec
    , http-client
    , QuickCheck
    , quickcheck-instances
    , text
    -- , servant-aeson-specs
    , servant-client
    , containers

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-bloc
