name: blockapps-bloc
version: 0.1.0.0
synopsis: Bloc microservice
description: Bloc microservice
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-bloc
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    BlockApps.Bloc.API
    BlockApps.Bloc.API.Client
    BlockApps.Bloc.API.Mock
    BlockApps.Bloc.API.Server
    BlockApps.Bloc.Store
    BlockApps.Bloc.User
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
    , blockapps-data
    , blockapps-strato
    , acid-state
    , aeson
    , containers
    , bytestring
    , generic-random
    , http-api-data
    , http-media
    , mtl
    , QuickCheck
    , quickcheck-instances
    , safecopy
    , servant
    , servant-client
    , servant-mock
    , servant-server
    , text

test-suite blockapps-bloc-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
  build-depends: base >=4 && < 5
    , blockapps-bloc
    , hspec

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-bloc
