name: blockapps-bloc
version: 0.1.0.0
synopsis: Bloc microservice
description: Bloc microservice
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-bloc
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    BlockApps.Bloc.API
    BlockApps.Bloc.API.Addresses
    BlockApps.Bloc.API.Contracts
    BlockApps.Bloc.API.Search
    BlockApps.Bloc.API.Users
    BlockApps.Bloc.API.Utils
    BlockApps.Bloc.Database
    BlockApps.Bloc.Monad
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
    , blockapps-data
    , blockapps-strato
    , aeson
    , aeson-casing
    , containers
    , contravariant
    , cryptonite
    , bytestring
    , generic-random
    , hasql
    , http-api-data
    , http-client
    , http-media
    , logging-effect
    , mtl
    , QuickCheck
    , quickcheck-instances
    , secp256k1
    , servant
    , servant-client
    , servant-docs
    , servant-mock
    , servant-server
    , stm
    , text
    , time
    , unordered-containers
    , warp
    , wl-pprint-text

executable blockapps-bloc
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
    , blockapps-bloc
    , blockapps-strato
    , hasql
    , http-client
    , warp
  default-language: Haskell2010

test-suite blockapps-bloc-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
    BlockApps.Bloc.APISpec
    BlockApps.Bloc.API.AddressesSpec
    BlockApps.Bloc.API.ContractsSpec
  other-modules:
  build-depends: base >=4 && < 5
    , blockapps-bloc
    , blockapps-data
    , hspec
    , http-client
    , servant-aeson-specs
    , servant-client

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-bloc
