name: blockapps-data
version: 0.1.0.0
synopsis: BlockApps datatypes
description: BlockApps datatypes
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-data
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    BlockApps.Data
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
    , aeson
    , bytestring
    , http-api-data
    , largeword
    , QuickCheck
    , secp256k1
    , text
    , time

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-data
