name: blockapps-data
version: 0.1.0.0
synopsis: BlockApps datatypes
description: BlockApps datatypes
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-data
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    BlockApps.Data
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base
    , aeson
    , base16-bytestring
    , binary
    , bytestring
    , cryptonite
    , hashable
    , http-api-data
    , largeword
    , memory
    , QuickCheck
    , secp256k1
    , servant
    , servant-docs
    , text
    , time

test-suite blockapps-data-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall
  main-is: Spec.hs
  other-modules:
    BlockApps.DataSpec
  build-depends: base >=4 && < 5
    , blockapps-data
    , aeson
    , hspec
    , http-api-data
    , QuickCheck

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-data
