name: blockapps-tools
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: Apache-2.0
description:  
	      Tool to query the ethereum databases

executable queryStrato
    default-language: Haskell2010
    build-depends: 
                   base >= 4 && < 5
                 , ansi-wl-pprint
                 , array
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-util
                 , bytestring
                 , cmdargs
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , ethereum-rlp
                 , ethereum-vm
                 , filepath
                 , blockapps-haskoin
                 , leveldb-haskell
                 , lens
                 , merkle-patricia-db
                 , blockapps-milena
                 , monad-logger
                 , monad-loops
                 , mtl
                 , network
                 , nibblestring
                 , persistent-postgresql
                 , process
                 , resourcet
                 , strato-p2p-client
                 , time
                 , transformers
                 , strato-conf
                 , aeson
                 , text
                 , strato-sequencer
                 , strato-index
                 , strato-statediff
                 , strato-redis-blockdb
                 , strato-model
                 , hedis
    main-is: Main.hs
    other-modules:
                   Block
                   BlockGO
                   Code
                   Checkpoints
                   DumpKafkaBlocks
                   DumpKafkaUnminedBlocks
                   DumpKafkaSequencer
                   DumpKafkaUnSequencer
                   DumpKafkaStateDiff
                   DumpKafkaRaw
                   DumpLevelDB
                   DumpRedis
                   FRawMP
                   Hash
                   Raw
                   RawMP
                   RLP
                   State
                   Util
                   Psql
                   InsertTX
    buildable: True
    hs-source-dirs: src
