name: blockapps-tools
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: Apache-2.0
description:
	      Tool to query the ethereum databases

executable queryStrato
    default-language: Haskell2010
    build-depends:
                   base >= 4 && < 5
                 , ansi-wl-pprint
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-util
                 , bytestring
                 , cmdargs
                 , data-default
                 , ethereum-rlp
                 , filepath
                 , blockapps-haskoin
                 , leveldb-haskell
                 , merkle-patricia-db
                 , blockapps-milena
                 , monad-logger
                 , monad-loops
                 , nibblestring
                 , persistent-postgresql
                 , resourcet
                 , time
                 , strato-conf
                 , strato-sequencer
                 , strato-index
                 , strato-redis-blockdb
                 , strato-model
                 , hedis
    main-is: Main.hs
    other-modules:
                   Block
                   BlockGO
                   CanonRedis
                   Code
                   Checkpoints
                   DumpKafkaBlocks
                   DumpKafkaUnminedBlocks
                   DumpKafkaSequencer
                   DumpKafkaUnSequencer
                   DumpKafkaStateDiff
                   DumpKafkaRaw
                   DumpLevelDB
                   DumpRedis
                   FRawMP
                   Hash
                   Raw
                   RawMP
                   RLP
                   State
                   Util
                   Psql
                   InsertTX
    buildable: True
    hs-source-dirs: src


executable b16decode
    default-language: Haskell2010
    build-depends:
                   base >= 4 && < 5
                 , base16-bytestring
                 , bytestring
    main-is: B16Decode.hs
    buildable: True
    hs-source-dirs: src
