
name:                blockapps-util
version:             0.1.0.0
license-file:        LICENSE
author:              jamshid
maintainer:          j
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  exposed-modules:     Blockchain.Colors
                     , Blockchain.Error
                     , Blockchain.ExtWord
                     , Blockchain.Format
                     , Blockchain.MiscJSON
                     , Blockchain.Output
                     , Blockchain.SHA
                     , Blockchain.Util
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , binary
                     , bytestring
                     , cryptohash
                     , ethereum-rlp
                     , fast-logger
                     , filepath
                     , global-lock
                     , haskoin
                     , monad-logger
                     , nibblestring
                     , path-pieces
                     , stm
                     , text
                     , unix
  hs-source-dirs:      src
  default-language:    Haskell2010