name:
  blockapps-ecrecover
version:
  0.4
synopsis:
  An implementation of the EC Recover algorithm
copyright:
  2016, Blockapps
build-type:
  Simple
extra-source-files:
  c-source/secp256k1/*.h
  c-source/secp256k1/include/*.h
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    https://github.com/blockapps/ecrecover

library
  hs-source-dirs:
    src
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  c-sources:
    c-source/recover.cc
  include-dirs:
    c-source/secp256k1
    c-source/secp256k1/include
  extra-libraries:
    gmp
  exposed-modules:
    BlockApps.ECRecover.BytesFormat
    BlockApps.ECRecover.IntegerFormat
  other-modules:
    BlockApps.ECRecover.Pointers
    BlockApps.ECRecover.Prelude
    BlockApps.ECRecover.Foreign
  build-depends:
    text == 1.*,
    bytestring == 0.10.*,
    base-prelude == 1.*,
    base == 4.*

test-suite tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    Main.Samples
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- 
    blockapps-ecrecover,
    -- testing:
    tasty < 0.12,
    tasty-quickcheck < 0.9,
    tasty-hunit < 0.10,
    QuickCheck < 3,
    -- parallelism and concurrency:
    parallel == 3.*,
    -- basics:
    rerebase < 2

benchmark sequential-benchmark
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    sequential-benchmark
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  ghc-prof-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- 
    blockapps-ecrecover,
    -- benchmarking:
    criterion == 1.1.*,
    -- 
    rerebase < 2

benchmark parallel-benchmark
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    parallel-benchmark
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  ghc-prof-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- 
    blockapps-ecrecover,
    -- benchmarking:
    criterion == 1.1.*,
    -- parallelism and concurrency:
    parallel == 3.*,
    -- 
    rerebase < 2
