name: blockapps-ethereum-abi
version: 0.1.0.0
synopsis: Ethereum datatypes
description: Ethereum datatypes
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-ethereum-abi
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    BlockApps.Ethereum.Abi.Int
    BlockApps.Ethereum.Abi.Type
    BlockApps.Ethereum.Abi.Value
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
    , blockapps-ethereum
    , binary
    , bytestring
    , largeint
    , largeword
    , text

test-suite blockapps-ethereum-abi-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
    BlockApps.Ethereum.Abi.ValueSpec
  build-depends: base >=4 && < 5
    , blockapps-ethereum
    , blockapps-ethereum-abi
    , base16-bytestring
    , hspec

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-ethereum-abi
