
name:                ethereum-discovery
version:             0.1.0.0
author:              jamshid
maintainer:          jim
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , cpu
                     , cryptohash
                     , crypto-pubkey
                     , crypto-pubkey-types
                     , entropy
                     , ethereum-encryption
                     , ethereum-rlp
                     , haskoin
                     , lifted-base
                     , monad-logger
                     , mtl
                     , network
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , postgresql-simple
                     , random
                     , regex-pcre
                     , resourcet
                     , split
                     , strato-conf
                     , text
                     , time
                     , transformers
  exposed-modules:
                       Blockchain.Data.Peer
                       Executable.EthereumDiscovery
                       Executable.EthDiscoverySetup
                       Blockchain.UDP
  other-modules:       Blockchain.ContextLite
                       Blockchain.ExtendedECDSA
                       Blockchain.P2PUtil
                       Blockchain.PeerDB
                       Blockchain.UDPServer
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable ethereum-discover
  main-is:             Main.hs
  build-depends:       base
                     , blockapps-util
                     , ethereum-discovery
                     , monad-logger
                     , network
  hs-source-dirs:      exec_src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

