
name:                ethereum-discovery
version:             0.1.0.0
author:              jamshid
maintainer:          jim
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , cpu
                     , cryptohash
                     , crypto-pubkey
                     , crypto-pubkey-types
                     , entropy
                     , errors
                     , ethereum-encryption
                     , ethereum-rlp
                     , blockapps-haskoin
                     , exceptions
                     , lifted-base
                     , monad-logger
                     , mtl
                     , network
                     , network-uri
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , postgresql-simple
                     , random
                     , resourcet
                     , split
                     , strato-conf
                     , text
                     , time
                     , transformers
  exposed-modules:  Blockchain.Strato.Discovery.Data.Peer
                  , Blockchain.Strato.Discovery.UDP
                  , Executable.EthereumDiscovery
                  , Executable.EthDiscoverySetup
  other-modules:  Blockchain.Strato.Discovery.ContextLite
                , Blockchain.Strato.Discovery.ExtendedECDSA
                , Blockchain.Strato.Discovery.P2PUtil
                , Blockchain.Strato.Discovery.PeerDB
                , Blockchain.Strato.Discovery.UDPServer
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable ethereum-discover
  main-is:             Main.hs
  build-depends:       base
                     , blockapps-util
                     , ethereum-discovery
                     , monad-logger
                     , network
  hs-source-dirs:      exec_src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite ethereum-discover-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options: -Wall -Werror
    main-is: Spec.hs
    other-modules:
        Blockchain.Strato.Discovery.Data.PeerSpec
        Blockchain.Strato.Discovery.UDPSpec
    build-depends: base
      , blockapps-util
      , hspec
      , ethereum-discovery
      , network
