
name:                ethereum-encryption
version:             0.1.0.0
author:              jamshid
maintainer:          jim
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , blockapps-util
                     , bytestring
                     , cipher-aes
                     , conduit
                     , conduit-extra
                     , Crypto
                     , cryptohash
                     , crypto-pubkey
                     , crypto-pubkey-types
                     , crypto-random
                     , entropy
                     , ethereum-rlp
                     , blockapps-haskoin
                     , lifted-base
                     , mtl
                     , network
                     , resourcet
                     , spoon
                     , time
                     , transformers
                     , ansi-wl-pprint
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2  -fno-warn-warnings-deprecations
  exposed-modules:     Blockchain.AESCTR
                     , Blockchain.Data.PubKey
                     , Blockchain.ExtendedECDSA
                     , Blockchain.ECIES
                     , Blockchain.Frame
                     , Blockchain.Handshake
                     , Blockchain.RLPx
                     , Blockchain.EthEncryptionException