name:                ethereum-jsonrpc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ethereum-jsonrpc
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , binary
                     , blaze-builder
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , containers
                     , cryptohash
                     , ethereum-rlp
                     , haskoin
                     , http-client
                     , http-types
                     , json-rpc-server
                     , milena
                     , mtl
                     , random
                     , strato-conf
                     , strato-sequencer
                     , text
                     , transformers
                     , unordered-containers
                     , utf8-string
                     , vector
                     , wai
                     , warp
  other-modules: APIProxy
               , Binary
               , Commands
               , RPC
               , Server
  default-language:    Haskell2010
