
name:                ethereum-test
version:             0.1.0.0
author:              jamshid
maintainer:          jamshid
build-type:          Simple
cabal-version:       >=1.10

executable ethereum-test
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , binary
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , containers
                     , cryptohash
                     , directory
                     , either
                     , ethereum-rlp
                     , ethereum-vm
                     , filepath
                     , haskoin
                     , hflags
                     , IfElse
                     , leveldb-haskell
                     , merkle-patricia-db
                     , mtl
                     , nibblestring
                     , resourcet
                     , scientific
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , ansi-wl-pprint
                     , monad-logger
                     , strato-sequencer
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       TestFiles
                     , TestDescriptions
                     , TestEthereum


Test-Suite test-ethereum-test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  hs-source-dirs:   test, src
  build-depends:    base >=4 && < 5
                  , data-default
                  , leveldb-haskell
                  , resourcet
                  , bytestring
                  , base16-bytestring
                  , transformers
                  , binary
                  , mtl
                  , containers
                  , HUnit
                  , test-framework
                  , test-framework-hunit
                  , ethereum-vm
                  , strato-sequencer
                  , nibblestring
                  , blockapps-data
                  , blockapps-util
                  , ethereum-rlp
                  , ansi-wl-pprint
                  , merkle-patricia-db
                  , directory
                   , aeson
                     , base16-bytestring
                     , binary
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , containers
                     , cryptohash
                     , directory
                     , either
                     , ethereum-rlp
                     , ethereum-vm
                     , filepath
                     , haskoin
                     , hflags
                     , IfElse
                     , leveldb-haskell
                     , merkle-patricia-db
                     , mtl
                     , nibblestring
                     , resourcet
                     , scientific
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , ansi-wl-pprint
                     , monad-logger
                     , strato-sequencer
 
